log
Sun Apr 10 23:53:29 UTC 2022: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:0:
hashmap.c:67:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
d744a37
